--- a/FinalProject/css/styles-catalogue.css
+++ b/FinalProject/css/styles-catalogue.css
@@ -46,17 +46,17 @@ html {
 	grid-template-columns: 0.5fr 1.5fr 1.5fr 0.5fr;
 	grid-template-rows: auto;
 }
-
-/*--------------------------------------------------------------
-NAVBAR
---------------------------------------------------------------*/
-
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 	font-family: "Bebas Neue", sans-serif;
 }
+
+/*--------------------------------------------------------------
+NAVBAR
+--------------------------------------------------------------*/
+
 nav {
 	position: fixed;
 	left: 0;
@@ -77,7 +77,7 @@ nav .navbar {
 }
 nav .navbar .logo a {
 	color: #fff;
-	font-size: 27px;
+	font-size: 1.6em;
 	font-weight: 600;
 	text-decoration: none;
 }
@@ -90,7 +90,7 @@ nav .navbar .menu {
 }
 .navbar .menu li a {
 	color: #fff;
-	font-size: 17px;
+	font-size: 1em;
 	font-weight: 500;
 	text-decoration: none;
 }
@@ -159,11 +159,11 @@ h3 {
 	text-align: center;
 	margin: 0;
 	padding: 1em 0;
+	font-size: 1.7em;
 }
 
 p {
 	margin: 0;
-	padding: 1em 0;
 }
 
 .gallery p {
@@ -184,7 +184,7 @@ Small Gallery Buckets
 --------------------------------------------------------------*/
 
 .gallery {
-	margin: 1em 0;
+	margin: 3em 0;
 	padding: 1em 0 0 0em;
 }
 
@@ -194,7 +194,7 @@ Small Gallery Buckets
 	grid-template-rows: repeat(2, auto);
 	list-style: none;
 	padding: 0;
-	border: 2em solid;
+	border: 1em solid;
 	border-radius: 10px;
 	border-color: #000000;
 	width: 100%;
@@ -209,9 +209,15 @@ Small Gallery Buckets
 	background-color: #000000;
 }
 
+.gallery li p {
+	margin-top: -1.2em;
+	text-align: center;
+	font-size: 1.2em;
+}
+
 .gallery img {
 	width: 100%;
-	height: 300px;
+	height: 60%;
 	object-fit: cover;
 	border-radius: 10px;
 }
@@ -240,30 +246,6 @@ MEDIA QUERIES AND SUPPORT
 --------------------------------------------------------------*/
 
 @supports (grid-area: auto) {
-	@media screen and (min-width: 50em) {
-		.site {
-			max-width: none;
-			display: grid;
-			grid-template-columns: 15em auto;
-		}
-
-		.header {
-			grid-column: 1/3;
-		}
-
-		.feature {
-			grid-column: 2/3;
-		}
-
-		.main-area {
-			grid-column: 2/3;
-		}
-
-		.footer {
-			grid-column: 1/3;
-		}
-	}
-
 	@media screen and (min-width: 65em) {
 		.site {
 			grid-template-columns: 7em auto 7em;
@@ -280,6 +262,29 @@ MEDIA QUERIES AND SUPPORT
 }
 
 @media screen and (min-width: 600px) {
+	h1,
+	h2,
+	h3 {
+		text-align: center;
+		margin: 0;
+		padding: 1em 0;
+		font-size: 2.5em;
+	}
+
+	nav .navbar .logo a {
+		color: #fff;
+		font-size: 1.8em;
+		font-weight: 600;
+		text-decoration: none;
+	}
+
+	.navbar .menu li a {
+		color: #fff;
+		font-size: 1.3em;
+		font-weight: 500;
+		text-decoration: none;
+	}
+
 	.subheader-text {
 		columns: 2;
 		column-gap: 2em;
@@ -287,5 +292,17 @@ MEDIA QUERIES AND SUPPORT
 
 	.subheader-text p {
 		padding-top: 0;
+	}
+
+	.gallery ul {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr); /* Create two columns */
+		gap: 1em; /* Adjust gap as needed */
+	}
+
+	.gallery li p {
+		margin-top: -1.2em;
+		text-align: center;
+		font-size: 1.6em;
 	}
 }
