--- a/FinalProject/css/styles-index.css
+++ b/FinalProject/css/styles-index.css
@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------
-/screen reader/accessibility
+SCREEN READER/ACCESSIBILITY
 --------------------------------------------------------------*/
 
 .screen-reader-text {
@@ -32,11 +32,11 @@
 }
 
 /*--------------------------------------------------------------
-general
+GENERAL
 --------------------------------------------------------------*/
 
 html {
-	background-color: #000000;
+	background: url("/images/starsindex.jpg");
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -48,13 +48,13 @@ html {
 	grid-template-rows: auto;
 }
 
-.learn {
+.bottom-button {
 	text-align: center;
 	color: #ffffff;
 }
 
 /*--------------------------------------------------------------
-Navbar
+NAVIGATION BAR
 --------------------------------------------------------------*/
 
 * {
@@ -114,7 +114,7 @@ nav .navbar .menu {
 }
 
 /*--------------------------------------------------------------
-Header Area
+BODY
 --------------------------------------------------------------*/
 
 /*---------- FEAUTURE -----------*/
@@ -130,11 +130,26 @@ Header Area
 	padding-bottom: 2em;
 	border-radius: 10px;
 	margin-top: -2em;
+	padding: 0 1.5em 0 1.5em;
 }
 
 .subheader-content {
-	padding: 1.5em;
 	color: #ffffff;
+}
+
+/*---------- BOTTOM BUTTON -----------*/
+
+.bottom-button {
+	margin: 2em 0 1.5em 0;
+	border: 0.2em solid;
+	border-color: #ffffff;
+	background-color: white;
+}
+
+.bottom-button a {
+	text-decoration: none;
+	color: #000000;
+	font-size: 2em;
 }
 
 /*--------------------------------------------------------------
@@ -157,15 +172,14 @@ h1,
 h2,
 h3 {
 	text-align: center;
-	font-size: 2em;
+	font-size: 3em;
 	margin: 0;
-	padding-bottom: 1em;
+	padding-bottom: 0.3em;
 }
 
 p {
 	text-align: center;
-	margin: 0;
-	padding: 1em 0;
+	font-size: 1.3em;
 }
 
 img {
@@ -173,45 +187,6 @@ img {
 	border: 0;
 	width: 100%;
 	height: auto;
-}
-
-/*--------------------------------------------------------------
-Small Gallery Buckets
---------------------------------------------------------------*/
-
-.smgallery {
-	margin: 1em 0;
-	padding: 1em 0 0 0em;
-}
-
-.smgallery ul {
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: repeat(2, auto);
-	gap: 1em;
-	list-style: none;
-	padding: 0;
-	width: 100%;
-}
-
-.smgallery li {
-	display: flex;
-	flex-direction: column;
-	background-color: hsl(51, 18%, 49%);
-	border-radius: 5px;
-	overflow: hidden;
-}
-
-.smgallery img {
-	width: 100%;
-	height: 300px;
-	object-fit: cover;
-	border-radius: 5px 5px 0 0;
-}
-
-.bucket {
-	padding: 1em;
-	flex-grow: 1;
 }
 
 /*--------------------------------------------------------------
@@ -238,37 +213,9 @@ MEDIA QUERIES AND SUPPORT
 --------------------------------------------------------------*/
 
 @supports (grid-area: auto) {
-	@media screen and (min-width: 50em) {
-		.site {
-			max-width: none;
-			display: grid;
-			grid-template-columns: 15em auto;
-		}
-
-		.header {
-			grid-column: 1/3;
-		}
-
-		.feature {
-			grid-column: 2/3;
-		}
-
-		.main-area {
-			grid-column: 2/3;
-		}
-
-		.footer {
-			grid-column: 1/3;
-		}
-	}
-
 	@media screen and (min-width: 65em) {
 		.site {
 			grid-template-columns: 7em auto 7em;
-		}
-
-		.masthead {
-			grid-column: 1/4;
 		}
 
 		.footer {
@@ -279,11 +226,56 @@ MEDIA QUERIES AND SUPPORT
 
 @media screen and (min-width: 600px) {
 	.subheader-text {
-		columns: 2;
+		columns: 1;
 		column-gap: 2em;
+	}
+
+	nav .navbar .logo a {
+		color: #fff;
+		font-size: 1.8em;
+		font-weight: 600;
+		text-decoration: none;
+	}
+
+	.navbar .menu li a {
+		color: #fff;
+		font-size: 1.3em;
+		font-weight: 500;
+		text-decoration: none;
+	}
+
+	.feature {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-radius: 10px;
+		width: 60%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.feature img {
+		max-width: 100%;
+		height: auto;
+	}
+	.bottom-button {
+		margin: 7em 2.5em 5em 2.5em;
+		border-color: #ffffff;
+		background-color: white;
+	}
+
+	.bottom-button a {
+		text-decoration: none;
+		color: #000000;
+		font-size: 2em;
+	}
+
+	h2 {
+		font-size: 5em;
 	}
 
 	.subheader-text p {
 		padding-top: 0;
+		font-size: 3em;
 	}
 }
