--- a/FinalProject/css/styles-mission.css
+++ b/FinalProject/css/styles-mission.css
@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------
-/screen reader/accessibility
+SCREEN READER/ACCESSIBILITY
 --------------------------------------------------------------*/
 
 .screen-reader-text {
@@ -32,7 +32,7 @@
 }
 
 /*--------------------------------------------------------------
-general
+GENERAL
 --------------------------------------------------------------*/
 
 html {
@@ -44,17 +44,17 @@ html {
 }
 
 .site {
-	grid-template-columns: 0.5fr 1.5fr 1.5fr 0.5fr;
-	grid-template-rows: auto;
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
 }
 
-.learn {
+.bottom-button {
 	text-align: center;
 	color: #ffffff;
 }
 
 /*--------------------------------------------------------------
-Navbar
+NAVGIATION
 --------------------------------------------------------------*/
 
 * {
@@ -114,7 +114,7 @@ nav .navbar .menu {
 }
 
 /*--------------------------------------------------------------
-Header Area
+BODY
 --------------------------------------------------------------*/
 
 /*---------- FEAUTURE -----------*/
@@ -181,43 +181,17 @@ img {
 	height: auto;
 }
 
-/*--------------------------------------------------------------
-Small Gallery Buckets
---------------------------------------------------------------*/
-
-.smgallery {
-	margin: 1em 0;
-	padding: 1em 0 0 0em;
+.bottom-button {
+	margin: 2em 0 1.5em 0;
+	border: 0.2em solid;
+	border-color: #ffffff;
+	background-color: white;
 }
 
-.smgallery ul {
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: repeat(2, auto);
-	gap: 1em;
-	list-style: none;
-	padding: 0;
-	width: 100%;
-}
-
-.smgallery li {
-	display: flex;
-	flex-direction: column;
-	background-color: hsl(51, 18%, 49%);
-	border-radius: 5px;
-	overflow: hidden;
-}
-
-.smgallery img {
-	width: 100%;
-	height: 300px;
-	object-fit: cover;
-	border-radius: 5px 5px 0 0;
-}
-
-.bucket {
-	padding: 1em;
-	flex-grow: 1;
+.bottom-button a {
+	text-decoration: none;
+	color: #000000;
+	font-size: 2em;
 }
 
 /*--------------------------------------------------------------
@@ -285,12 +259,57 @@ MEDIA QUERIES AND SUPPORT
 }
 
 @media screen and (min-width: 600px) {
-	.subheader-text {
-		columns: 2;
-		column-gap: 2em;
+	.site {
+		grid-template-columns: repeat(1, 1fr);
 	}
 
-	.subheader-text p {
-		padding-top: 0;
+	h2 {
+		margin-top: -2em;
+		font-size: 5em;
+	}
+
+	nav .navbar .logo a {
+		color: #fff;
+		font-size: 1.8em;
+		font-weight: 600;
+		text-decoration: none;
+	}
+
+	.navbar .menu li a {
+		color: #fff;
+		font-size: 1.3em;
+		font-weight: 500;
+		text-decoration: none;
+	}
+	.feature {
+		grid-column: 1 / -1;
+		grid-row: span 1;
+	}
+
+	.feature img {
+		max-height: 60%;
+	}
+
+	.subheader {
+		grid-column: 1 / -1;
+		grid-row: 2;
+	}
+
+	.subheader-text-contact p {
+		margin: -1em 0 1em 0;
+		font-size: 3em;
+	}
+
+	.bottom-button {
+		margin-top: 2em;
+		border: 0.2em solid;
+		border-color: #ffffff;
+		background-color: white;
+	}
+
+	.bottom-button a {
+		text-decoration: none;
+		color: #000000;
+		font-size: 2em;
 	}
 }
